--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
-[submodule "ext/dcos/1.11"]
-	path = ext/dcos/1.11
-	url = git@github.com:dcos/dcos
 [submodule "ext/dcos/1.12"]
 	path = ext/dcos/1.12
 	url = git@github.com:dcos/dcos
+	branch = 1.12
+[submodule "ext/dcos/1.11"]
+	path = ext/dcos/1.11
+	url = git@github.com:dcos/dcos
+	branch = 1.11
